--- a/iris_classification_final.ipynb
+++ b/iris_classification_final.ipynb
@@ -2177,6 +2177,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6fd3278",
+   "metadata": {},
+   "source": [
+    "# Model 3: Decision Tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "id": "b0f4c68f",
