Fix data selection in iris classification notebook

--- a/iris_classification_final.ipynb
+++ b/iris_classification_final.ipynb
@@ -315,7 +315,7 @@
    "outputs": [],
    "source": [
     "feature_cols = dataset.columns[:-1]\n",
-    "X = dataset[feature_cols]\n",
+    "X = dataset.drop(columns=[\'Id\', \'Species\']\n",
     "y = dataset[\"Species\"]"
    ]
   },
